2005-05-19  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b18)

	* GR now sets user-agent and referer to fetch pictures, to comply
	  with elevated G2 security when using Block hotlinked items in the
	  URL Rewrite module.

2005-05-04  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b17)

	* GR and the GR applets are now able to run slideshows of G2
	  albums.
	* Slideshows can now start from a picture other than the first.
	  This is only available in the G2 applet right now.
	* Added debugging for thoses cases when some preferences are
	  missing.

2005-05-02  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b16)

	* Added support for slideshows of G2 albums, a prelude to
	  adding java-based fullscreen slideshows in G2.

2005-04-27  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b15)

	* Added support for an arbitrary number of cookies to be passed
	  to the applets, with the applet parameters gr_cookie/n/_name
	  and gr_cookie/n/_value where /n/ starts with 1 and are consecutive.

2005-04-25  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b14)

	* Added support for the applet to force the version of Gallery
	  it's embedded in, to overcome instances of Apache sending
	  a 200 error code even though gallery_remote2.php doesn't exist
	  instead of 404 (in G2).

2005-04-22  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b13)

	* Fixed error message for self-signed cert to point to GR documentation.

2005-03-01  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b12)

	* Should support Mambo-embedded Gallery.

2005-02-28  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b11)

	* Fixed setting proxy info for downloading images already
	  on server.
	* Yet another attempt at fixing applet URL logic. Added a
	  manual gr_url_override applet parameter as a fix
	  for people whose Gallery URLs hopelessly confuse GR.
	* Applet jars are signed with the new cert, which expires
	  in 2007.

2005-01-23  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b10)
