@@ -183,6 +183,9 @@ slideshowNoStretch=false
 # Preload all images from the server, not just the next one
 slideshowPreloadAll=false
 
+# Loop the slideshow to create and endless slideshow
+slideshowLoop=false
+
 #
 # --- Applet ---
 #
@@ -242,6 +245,6 @@ updateUrlBeta=http://gallery.sourceforge.net/gallery_remote_version_check_beta.p
 #
 # --- Do not edit below this line ---
 #
-version=1.4.2-b18
+version=1.4.2-b19
 releaseDate=2005/05/19
 aboutText=Gallery Remote\n \n \nA part of the Gallery Open-Source Project\nhttp://gallery.sourceforge.net\n \n \nMaintained by:\n \nPierre-Luc Paour\n \n \nInitial version by Chris Smith\n \n \nContributors:\n \nTim Miller\nDolan Halbrook\nMarkus Cozowicz\nScott Gartner\nAmedeo Paglione\nChris Schwerdt\nSeth Ladd\n \n \nArtwork by Ross A. Reyman\n \n \nBundled software:\n \nImageMagick\nJava look and feel Graphics Repository icons\njpegtran, Guido Vollbeding's version\nMetadataExtractor
